test if powershell script comes where it's supposed to

--- a/build.yml
+++ b/build.yml
@@ -50,6 +50,7 @@ jobs:
 
       if (${{ parameters.useVersionSuffix }} -eq $true) 
       {
+        Write-Host "Updating Build Number to Version Suffix"
         if ([string]::IsNullOrEmpty($versionSuffix)) 
         {
           $versionSuffix = $env:BUILD_BUILDNUMBER
