--- a/build.yml
+++ b/build.yml
@@ -48,9 +48,9 @@ jobs:
         $versionSuffix = $versionSuffix.Trim()      
       }  
 
-      Write-Host ${{ parameters.useVersionSuffix }} -eq true }}
+      Write-Host ${{ parameters.useVersionSuffix }}
 
-      if ( ${{ parameters.useVersionSuffix }})
+      if ( ${{ parameters.useVersionSuffix }} -eq true)
       {
         Write-Host "Updating Build Number to Version Suffix"
         if ([string]::IsNullOrEmpty($versionSuffix)) 
