--- a/publish.yml
+++ b/publish.yml
@@ -6,8 +6,22 @@ parameters:
   useVersionSuffix: true
   publishWebProjects: false
   zipAfterPublish: false
+  versionSuffix: ''
 
 steps:
+- powershell: |
+    [string]$versionSuffix = '${{ parameters.versionSuffix }}'
+    Write-Host "Version Suffix: $versionSuffix"
+    [bool]$useVersionSuffix = ${{ parameters.useVersionSuffix }}
+    if ([string]::IsNullOrEmpty($versionSuffix) -and ${{ $useVersionSuffix }} -eq $true) 
+    {
+      $versionSuffix = $env:BUILD_BUILDNUMBER
+    }
+    
+    Write-Host "Version Suffix: $versionSuffix"
+    Write-Host "##vso[task.setvariable variable=VersionSuffix]$versionSuffix"
+  displayName: 'Retrieve version suffix'
+
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish with version suffix'
   inputs:
@@ -17,21 +31,9 @@ steps:
     projects: |
      **\*.csproj
      !**\*Tests.csproj
-    arguments: '-o $(Build.ArtifactStagingDirectory)/plugin_output -c Release --version-suffix $(build.buildNumber)'
-  condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'true'))
+    arguments: '-o $(Build.ArtifactStagingDirectory)/plugin_output -c Release --version-suffix $(VersionSuffix)'
+  condition: succeeded()
     
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: publish
-    publishWebProjects: ${{ parameters.publishWebProjects }}
-    zipAfterPublish: ${{ parameters.zipAfterPublish }}
-    projects: |
-     **\*.csproj
-     !**\*Tests.csproj
-    arguments: '-o $(Build.ArtifactStagingDirectory)/plugin_output -c Release'
-  condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'false'))
-
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: plugin'
   inputs:
