--- a/package.yml
+++ b/package.yml
@@ -7,13 +7,13 @@ parameters:
 steps:
   - powershell: |
       [string]$versionSuffix = '${{ parameters.versionSuffix }}'
-      Write-Host "Version Suffix: $versionSuffix"
-      [bool]$useVersionSuffix = ${{ parameters.useVersionSuffix }}
-      if ([string]::IsNullOrEmpty($versionSuffix) -and ${{ $useVersionSuffix }} -eq $true) 
+      [string]$useVersionSuffix = '${{ parameters.useVersionSuffix }}''
+      
+      if ([string]::IsNullOrEmpty($versionSuffix) -and ${{ $useVersionSuffix }} -eq 'true') 
       {
         $versionSuffix = $env:BUILD_BUILDNUMBER
       }
-     
+      
       Write-Host "Version Suffix: $versionSuffix"
       Write-Host "##vso[task.setvariable variable=VersionSuffix]$versionSuffix"
     displayName: 'Retrieve version suffix'
