remove brackets here too

--- a/publish.yml
+++ b/publish.yml
@@ -13,7 +13,7 @@ steps:
     [string]$versionSuffix = '${{ parameters.versionSuffix }}'
     [string]$useVersionSuffix = '${{ parameters.useVersionSuffix }}''
     
-    if ([string]::IsNullOrEmpty($versionSuffix) -and ${{ $useVersionSuffix }} -eq 'true') 
+    if ([string]::IsNullOrEmpty($versionSuffix) -and $useVersionSuffix -eq true) 
     {
       $versionSuffix = $env:BUILD_BUILDNUMBER
     }
