--- a/package.yml
+++ b/package.yml
@@ -1,21 +1,15 @@
 parameters:
   # Default values
-  - name: useVersionSuffix
-    type: boolean
-    default: true
-  - name: versionSuffix
-    type: string
-    default: ''
-  - name: artifactName
-    type: string
-    default: 'NuGetPackages'
+  - useVersionSuffix: true
+  - versionSuffix: ''
+  - artifactName: 'NuGetPackages'
 
 steps:
   - powershell: |
       [string] $versionSuffix = '${{ parameters.versionSuffix }}'
-      [bool] $useVersionSuffix = ${{ parameters.useVersionSuffix }}
+      [string] $useVersionSuffix = ${{ parameters.useVersionSuffix }}
       
-      if ([string]::IsNullOrEmpty($versionSuffix) -and $useVersionSuffix -eq $true) 
+      if ([string]::IsNullOrEmpty($versionSuffix) -and $useVersionSuffix -eq 'true') 
       {
         $versionSuffix = $env:BUILD_BUILDNUMBER
       }
