--- a/package.yml
+++ b/package.yml
@@ -20,7 +20,7 @@ steps:
 
   # Package nugets
   - script: dotnet pack --no-build --configuration $(buildConfiguration) --version-suffix $(VersionSuffix) --output $(Build.artifactStagingDirectory)/packages
-    displayName: 'dotnet pack $(buildConfiguration) with version suffix'
+    displayName: 'dotnet pack $(buildConfiguration)'
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact'
