--- a/package.yml
+++ b/package.yml
@@ -6,15 +6,18 @@ parameters:
 
 steps:
   - powershell: |
-      # [string] $versionSuffix = '${{ parameters.versionSuffix }}'
-      # [string] $addBuildNumber = '${{ parameters.useVersionSuffix }}'
+      [string] $versionSuffix = '${{ parameters.versionSuffix }}'
+      [string] $addBuildNumber = '${{ parameters.useVersionSuffix }}'
       
-      # if ([string]::IsNullOrEmpty($versionSuffix) -and $addBuildNumber -eq 'true') 
-      # {
-      #   $versionSuffix = $env:BUILD_BUILDNUMBER
-      # }
+       Write-Host "Add Build Number: $addBuildNumber"
+
+      if ([string]::IsNullOrEmpty($versionSuffix) -and $addBuildNumber -eq 'true') 
+      {
+        Write-Host "I've arrived here"
+        $versionSuffix = $env:BUILD_BUILDNUMBER
+      }
       
-      # Write-Host "Version Suffix: $versionSuffix"
+      Write-Host "Version Suffix: $versionSuffix"
       Write-Host "##vso[task.setvariable variable=VersionSuffixPackage;]rc2"
     displayName: 'Retrieve version suffix for packaging'
 
