Fixing other typo

--- a/build.yml
+++ b/build.yml
@@ -133,7 +133,7 @@ jobs:
           $version = $versionPrefix
         }  
         #Setting output variable $Version (used for VSTS) 
-        Write-Host "##vso[task.setvariable variable=Version;isOutput=true]$(version)"    
+        Write-Host "##vso[task.setvariable variable=Version;isOutput=true]$version"    
 
   - task: DotNetCoreCLI@2
     displayName: 'dotnet test UnitTests'
