--- a/build.yml
+++ b/build.yml
@@ -7,8 +7,8 @@ parameters:
   useVersionSuffix: true # if true, the build number will be added as or to the existing version suffix
   propsFile: '' # used for versionSuffix, if not empty, the versionSuffix will be read from the props file
   restoreDependencies: false
-  nuGetServiceConnections: #required when restoreDependies = true
-  nuGetSources: #required when restoreDependies = true
+  nuGetServiceConnections: # service connections to use for nuget feeds
+  nuGetSources: # sources to check for dependencies, other than the normal nuget.org feed
   packageArtifacts: false
   publishArtifacts: false
   packageArtifactName: 'NuGetPackages'
