--- a/restore.yml
+++ b/restore.yml
@@ -6,9 +6,10 @@ parameters:
   nuGetSources: #--source https://www.myget.org/F/mappingengine/api/v3/index.json --source https://www.myget.org/F/vonk/api/v3/index.json 
 
 steps:
-  - task: NuGetAuthenticate@1
-    inputs:
-      nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
+  - ${{if parameters.nuGetServiceConnections}}:
+    - task: NuGetAuthenticate@0
+      inputs:
+        nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
 
   - script: dotnet restore --source https://api.nuget.org/v3/index.json ${{ parameters.nuGetSources }}
     displayName: 'dotnet restore'
