--- a/scanCompiledArtifacts.yml
+++ b/scanCompiledArtifacts.yml
@@ -9,5 +9,5 @@ parameters:
 
 steps:
 - script: | 
-    docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v ${{ parameters.directory }}:/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,config,secret filesystem /src
+    docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v ${{ parameters.directory }}:/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,misconfig,secret filesystem /src
   displayName: Scan compiled code with Trivy
