--- a/build.yml
+++ b/build.yml
@@ -146,7 +146,7 @@ jobs:
     inputs:
       command: test
       projects: '**/*Tests/*Tests.csproj'
-      arguments: '--configuration $(buildConfiguration) --no-restore --filter ${parameters.testFilter}'
+      arguments: '--configuration $(buildConfiguration) --no-restore --filter ${{ parameters.testFilter }}'
 
   - ${{ if eq(parameters.packageArtifacts, 'true') }}:
     - template: package.yml
