--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -39,7 +39,30 @@ jobs:
       customCommand: 'pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}'
 
   - script: | 
-      docker run --rm -v /var/run/docker.sock:/var/run/docker.sock  -v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore aquasec/trivy:latest image --ignorefile /tmp/trivyignore --exit-code 1 --format table --scanners vuln,misconfig,secret  ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
+      retries=10
+      count=0
+      while [ $count -lt $retries ]; do
+        log_output=$(docker run --rm -v /var/run/docker.sock:/var/run/docker.sock  -v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore aquasec/trivy:latest image --ignorefile /tmp/trivyignore --exit-code 1 --format table --scanners vuln,misconfig,secret  ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} 2>&1)
+        echo "$log_output"
+        if echo "$log_output" | grep -q "Fatal error	init error: DB error: failed to download vulnerability DB: database download error"; then
+          count=$((count + 1))
+          echo "Scan failed due to DB download error. Attempt $count/$retries. Retrying in 30 seconds..."
+          sleep 30
+        else
+          if [ $? -eq 0 ]; then
+            echo "Scan completed successfully."
+            break
+          else
+            echo "Scan failed due to other errors."
+            exit 1
+          fi
+        fi
+      done
+      if [ $count -eq $retries ]; then
+        echo "Scan failed after $retries attempts due to DB download error."
+        exit 1
+      fi
+      
     displayName: Scan image with Trivy
 
 #  The Trivy task does not work yet.
