--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -43,13 +43,14 @@ jobs:
       count=0
       while [ $count -lt $retries ]; do
         log_output=$(docker run --rm -v /var/run/docker.sock:/var/run/docker.sock  -v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore aquasec/trivy:latest image --ignorefile /tmp/trivyignore --exit-code 1 --format table --scanners vuln,misconfig,secret  ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }} 2>&1)
+        result=$?
         echo "$log_output"
         if echo "$log_output" | grep -q "Fatal error	init error: DB error: failed to download vulnerability DB: database download error"; then
           count=$((count + 1))
           echo "Scan failed due to DB download error. Attempt $count/$retries. Retrying in 30 seconds..."
           sleep 30
         else
-          if [ $? -eq 0 ]; then
+          if [ $result -eq 0 ]; then
             echo "Scan completed successfully."
             break
           else
