--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -1,7 +1,6 @@
 parameters: 
   artifactName:  # name of the artifact on Azure DevOps that contains the Zip file                         
   zipfile: # name or pattern of the zipfile to be extracted and scanned
-  templatesDirectory: $(Pipeline.Workspace)/templates # Directory where the azure-pipeline-templates repo is checked out
 
 jobs:
 - job: scan  
@@ -22,7 +21,7 @@ jobs:
       destinationFolder: $(System.DefaultWorkingDirectory)/Binaries   
       cleanDestinationFolder: true
       overwriteExistingFiles: false
-  - script: |
-      ${{ parameters.templatesDirectory }}/scan_with_retries.sh "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(System.DefaultWorkingDirectory)/Binaries:/src aquasec/trivy:latest --exit-code 1 --format table --scanners vuln,misconfig,secret filesystem /src"
-    displayName: Scan compiled code with Trivy
-
+  - template: ./scanWithRetryTask.yml
+    parameters:
+      command: "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(System.DefaultWorkingDirectory)/Binaries:/src aquasec/trivy:latest --exit-code 1 --format table --scanners vuln,misconfig,secret filesystem /src"
+      displayName: Scan compiled code with Trivy
