--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -19,9 +19,6 @@ parameters:
   type: 'string'
   default: ''
   displayName: 'The version of the Docker repository'
-- name: templatesDirectory
-  type: 'string'
-  default: $(Pipeline.Workspace)/templates # Directory where the azure-pipeline-templates repo is checked out
 
 
 jobs:
@@ -41,9 +38,10 @@ jobs:
       script: |
         docker pull ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}
 
-  - script: |
-      ${{ parameters.templatesDirectory }}/scan_with_retries.sh "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock  -v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore aquasec/trivy:latest image --ignorefile /tmp/trivyignore --exit-code 1 --format table --scanners vuln,misconfig,secret  ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}"
-    displayName: Scan image with Trivy
+  - template: ./scanWithRetryTask.yml
+    parameters:
+      command: "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock  -v ${{ parameters.trivyIgnoreFile }}:/tmp/trivyignore aquasec/trivy:latest image --ignorefile /tmp/trivyignore --exit-code 1 --format table --scanners vuln,misconfig,secret  ${{ parameters.dockerRegistryName }}/${{ parameters.dockerImageRepoName }}:${{ parameters.dockerImageRepoVersion }}"
+      displayName: Scan image with Trivy
 
 #  The Trivy task does not work yet.
 #    - task: trivy@1
