Refactoring to allow ignore file in all trivy scan

--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -1,6 +1,7 @@
 parameters: 
   artifactName:  # name of the artifact on Azure DevOps that contains the Zip file                         
   zipfile: # name or pattern of the zipfile to be extracted and scanned
+  trivyIgnoreFile: '' # path to the trivy ignore file
 
 jobs:
 - job: scan  
@@ -23,5 +24,7 @@ jobs:
       overwriteExistingFiles: false
   - template: ./scanWithRetryTask.yml
     parameters:
-      command: "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(System.DefaultWorkingDirectory)/Binaries:/src aquasec/trivy:latest --exit-code 1 --format table --scanners vuln,misconfig,secret filesystem /src"
+      dockerExtraArguments: "-v $(System.DefaultWorkingDirectory)/Binaries:/src"
+      trivyExtraArguments: "filesystem /src"
+      trivyIgnoreFile: ${{ parameters.trivyIgnoreFile }}
       displayName: Scan compiled code with Trivy
