Fixing exit code

--- a/scanWithRetryTask.yml
+++ b/scanWithRetryTask.yml
@@ -34,13 +34,14 @@ steps:
     echo "Executing '$command' with retries..."
     while [ $count -lt $retries ]; do
       log_output=$($command 2>&1)
+      exit_code=$?
       echo "$log_output"
       if echo "$log_output" | grep "Fatal" | grep "failed to download artifact from any source" | grep -q "failed to download vulnerability DB"; then
         count=$((count + 1))
         echo "Scan failed due to DB download error. Attempt $count/$retries. Retrying in 30 seconds..."
         sleep 30
       else
-        if [ $? -eq 0 ]; then
+        if [ $exit_code -eq 0 ]; then
           echo "Scan completed successfully."
           break
         else
