--- a/build.yml
+++ b/build.yml
@@ -3,21 +3,59 @@
 
 parameters:
   # Default values
-  dotNetCoreVersion: '3.1.102' # can also be use with wildcards:  latest minor version of 3. , use '3.x'
-  useVersionSuffix: true # if true, the build number will be added as or to the existing version suffix
-  propsFile: '' # used for versionSuffix, if not empty, the versionSuffix will be read from the props file
-  restoreDependencies: false
-  nuGetServiceConnections: # service connections to use for nuget feeds
-  nuGetSources: # sources to check for dependencies, other than the normal nuget.org feed
-  packageArtifacts: false
-  publishArtifacts: false
-  packageArtifactName: 'NuGetPackages'
-  publishWebProjects: false
-  zipAfterPublish: false
-  checkoutSubmodules: false  
-  pool: {}
-  testFilter: '' # filter for unit tests; all tests by default
-  
+- name : dotNetCoreVersion
+  type: string
+  default: '3.1.102' # can also be use with wildcards:  latest minor version of 3. , use '3.x'
+  displayName: 'dotnet core version'
+- name: useVersionSuffix
+  type: boolean
+  default: true  # if true, the build number will be added as or to the existing version suffix
+- name: useVersionSuffix
+  type: boolean
+  default: true
+- name: useVersionSuffix
+  type: boolean
+  default: true
+- name: propsFile
+  type: string
+  default: '' # used for versionSuffix, if not empty, the versionSuffix will be read from the props file
+- name: restoreDependencies
+  type: boolean
+  default: false
+- name: nuGetServiceConnections
+  type: string
+  default: '' # Service connection credentials for feeds outside this organization. 
+- name: nuGetSources
+  type: string
+  default: --source https://nuget.pkg.github.com/FirelyTeam/index.json # sources to check for dependencies, other than the normal nuget.org feed
+- name: packageArtifacts
+  type: boolean
+  default: false
+- name: publishArtifacts
+  type: boolean
+  default: false
+- name: packageArtifactName
+  type: string
+  default: 'NuGetPackages'
+- name: publishWebProjects
+  type: boolean
+  default: false
+- name: zipAfterPublish
+  type: boolean
+  default: false
+- name: checkoutSubmodules
+  type: boolean
+  default: false
+- name: pool
+  type: object
+  default: {}
+- name: testFilter
+  type: string
+  default: '' # filter for unit tests; all tests by default
+- name: numberOfDaysRetainmentForReleaseBuild
+  type: number
+  default: 365 # number of days to retain the build
+
 
 jobs:
 - job: Build
@@ -171,3 +209,21 @@ jobs:
         publishWebProjects: ${{ parameters.publishWebProjects }}
         zipAfterPublish: ${{ parameters.zipAfterPublish }}
         versionSuffix: $(VersionSuffix)
+
+  # Retain the build if it is a release build
+  - ${{ if startswith(variables['Build.SourceBranch'], 'refs/tags/v') }}:
+    - task: PowerShell@2
+      condition: and(succeeded(), not(canceled()))
+      name: RetainOnSuccess
+      displayName: Retain Run for Release
+      inputs:
+        failOnStderr: true
+        targetType: 'inline'
+        script: |
+          $contentType = "application/json";
+          $headers = @{ Authorization = 'Bearer $(System.AccessToken)' };
+          $rawRequest = @{ daysValid = $(numberOfDaysRetainmentForReleaseBuild); definitionId = $(System.DefinitionId); ownerId = 'User:$(Build.RequestedForId)'; protectPipeline = $false; runId = $(Build.BuildId) };
+          $request = ConvertTo-Json @($rawRequest);
+          $uri = "$(System.CollectionUri)$(System.TeamProject)/_apis/build/retention/leases?api-version=6.0-preview.1";
+          Invoke-RestMethod -uri $uri -method POST -Headers $headers -ContentType $contentType -Body $request;
+  
