Extract the retain task as separate template

--- a/build.yml
+++ b/build.yml
@@ -206,18 +206,7 @@ jobs:
 
   # Retain the build if it is a release build
   - ${{ if startswith(variables['Build.SourceBranch'], 'refs/tags/v') }}:
-    - task: PowerShell@2
-      condition: and(succeeded(), not(canceled()))
-      name: RetainOnSuccess
-      displayName: Retain Run for Release
-      inputs:
-        failOnStderr: true
-        targetType: 'inline'
-        script: |
-          $contentType = "application/json";
-          $headers = @{ Authorization = 'Bearer $(System.AccessToken)' };
-          $rawRequest = @{ daysValid = $(numberOfDaysRetainmentForReleaseBuild); definitionId = $(System.DefinitionId); ownerId = 'User:$(Build.RequestedForId)'; protectPipeline = $false; runId = $(Build.BuildId) };
-          $request = ConvertTo-Json @($rawRequest);
-          $uri = "$(System.CollectionUri)$(System.TeamProject)/_apis/build/retention/leases?api-version=6.0-preview.1";
-          Invoke-RestMethod -uri $uri -method POST -Headers $headers -ContentType $contentType -Body $request;
+    - template: retainBuild.yml
+      parameters:
+        numberOfDaysRetainment: ${{ parameters.numberOfDaysRetainmentForReleaseBuild }}
   
