--- a/retainBuild.yml
+++ b/retainBuild.yml
@@ -3,12 +3,17 @@ parameters:
     type: number
     default: 365
     displayName: 'Number of days to retain the build'
+  - name: displayName
+    type: string
+    default: 'Execute scan with retries'
+    displayName: 'Retain Build if succeeded'
+
 
 steps:
   - task: PowerShell@2
     condition: and(succeeded(), not(canceled()))
     name: RetainOnSuccess
-    displayName: Retain Build if succeeded
+    displayName: ${{ parameters.displayName }}
     inputs:
       failOnStderr: true
       targetType: 'inline'
